# cpp-kanren

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Definitions.h  cpp-kanren.h  relations.h  stream.h
test/: CMakeLists.txt  cpp-kanren-test.cpp
